--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,12 @@ repositories {
 }
 
 dependencies {
+    def springVersion = '4.3.5.RELEASE'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
+    testCompile group: 'org.spockframework', name: 'spock-spring', version: '1.1-groovy-2.4'
+    testCompile group: 'org.springframework', name: 'spring-test', version: "${springVersion}"
+
 }
